--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>ヘルプ</h1>
+<p>
+  ヘルプは<a href="https://railstutorial.jp/help">Rails Tutorial ヘルプページ</a>を参照してください。
+</p>
