--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,12 @@
-<h1>ヘルプ</h1>
-<p>
-  ヘルプは<a href="https://railstutorial.jp/help">Rails Tutorial ヘルプページ</a>を参照してください。
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Help | Ruby on Rails Tutorial Sample App</title>
+  </head>
+  <body>
+    <h1>ヘルプ</h1>
+    <p>
+    ヘルプは<a href="https://railstutorial.jp/help">Rails Tutorial ヘルプページ</a>を参照してください。
+    </p>
+  </body>
+</html>
