--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,12 @@
-<h1>Sample App</h1>
-<p>
-  ここは<a href="https://railstutorial.jp/">Ruby on Rails チュートリアル</a>のサンプルページです。
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home | Ruby on Rails Tutorial Sample App</title>
+  </head>
+  <body>
+    <h1>Sample App</h1>
+    <p>
+    ここは<a href="https://railstutorial.jp/">Ruby on Rails チュートリアル</a>のサンプルページです。
+    </p>
+  </body>
+</html>
