--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, "About") %>
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About | Ruby on Rails Tutorial Sample App</head>
+    <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</head>
   </head>
   <body>
     <h1>About | Ruby on Rails Tutorial Sample App</h1>
