--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
-<%= @user.name %>, <%= @user.email %>, created: <%= @user.created_at %>, updated: <%= @user.updated_at %> , Time: <%= Time.now %>
+<% provide(:title, @user.name) %>
+<h1>
+  <%= gravatar_for @user %>
+  <%= @user.name %>
+</h1>
