--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-      <%= f.label :nome %>
-      <%= f.text_field :nome %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
       <%= f.label :email %>
       <%= f.email_field :email %>
